# U-2-Net

./: pyproject.toml  setup.py
