[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "u-2-net"
version = "0.1.0"
description = "U^2-Net for Salient Object Detection"
authors = []

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^11.0.0"
numpy = "1.26.4"
scikit-image = "0.14.0"
opencv-python = "^4.10.0.84"
torch = "*"  # Specify the version if necessary
torchvision = "*"  # Specify the version if necessary
paddlepaddle = "*"  # Specify the version if necessary
paddlehub = "*"  # Specify the version if necessary
gradio = "*"  # Specify the version if necessary

[tool.poetry.dev-dependencies]
pytest = "^6.0"  # Add development dependencies here
