[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "u2net"
version = "0.1.0"
description = "U^2-Net for Salient Object Detection"
authors = []
exclude = [
    "tests",
    "gradio",
    "figures",
    "test_data"
]

packages = [
    { include = "model", from = "."}
]

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^11.0.0"
numpy = "1.26.4"
opencv-python = "^4.10.0.84"
torch = "*"  # Specify the version if necessary
torchvision = "*"  # Specify the version if necessary
scikit-image = "^0.24.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"  # Add development dependencies here
# paddlepaddle = "^2.6.2"
# paddlehub = "^2.4.0"
# gradio = "^5.6.0"
