[tool.poetry]
name = "u2net"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^11.0.0"
numpy = "1.26.4"
opencv-python = "^4.10.0.84"
torch = "*"  # Specify the version if necessary
torchvision = "*"  # Specify the version if necessary
scikit-image = "^0.24.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
